[2.7] bpo-25943: Fix potential heap corruption in bsddb's _db_associateCallback()

There was a missing check for integer overflow, several function calls
were not checked for failure, and allocated memory was not freed if an
error occurred.